schimbare nume clasa Rule in Reader si eliminare metode statice, eliminare constructor din Enum, schimbare nume Clasa Request in EvalRequest