@@ -1,8 +1,6 @@
 package com.cf.symmetry.service.requirements;
 
 import com.cf.symmetry.exceptions.ReadRequirementException;
-import org.springframework.stereotype.Service;
-
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.nio.file.Files;
@@ -10,17 +8,17 @@ import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.List;
 import java.util.stream.Collectors;
+import org.springframework.stereotype.Service;
 
 @Service
-public class Rule {
+public class Reader {
 
-
-  public static List<Pair<Character>> getRulePair() {
+  public List<Pair<Character>> readPairs() {
 
     try {
       Path filePath = Paths.get(ClassLoader.getSystemResource("rules.txt").toURI());
       return Files.readAllLines(filePath).stream()
-          .map(line -> new Pair<>(line.charAt(0), line.charAt(1))).collect(Collectors.toList());
+          .map(line -> new Pair<>(line.charAt(0), line.charAt(1))).toList();
 
     } catch (NullPointerException | IOException | URISyntaxException e) {
       throw new ReadRequirementException("The file could not be opened!", e);
@@ -28,13 +26,13 @@ public class Rule {
 
   }
 
-  public static boolean compareCharacters(char left, char right) {
-    return getRulePair().stream()
-        .noneMatch(requirement -> requirement.checkPair(left, right));
+  public boolean compareCharacters(char left, char right) {
+    return readPairs().stream()
+        .noneMatch(pair -> pair.checkPair(left, right));
   }
 
-  public static boolean recognizeChar(char c) {
-    return getRulePair()
+  public boolean recognizeChar(char c) {
+    return readPairs()
         .stream().anyMatch(pair -> pair.getLeftChar() == c || pair.getRightChar() == c);
 
   }
